<resources>
    <string name="app_name">Calculadora Flex</string>
    <string name="header_gas_station">Posto de Gasolina</string>
    <string name="header_gasoline_price">Preço Gasolina</string>
    <string name="header_ethanol_price">Preço Etanol</string>
    <string name="header_average">Consumo médio</string>
    <string name="header_average_gasoline">Km/L Gasolina</string>
    <string name="header_average_ethanol">Km/L Álcool</string>
    <string name="hint_gasoline">Ex.: 3.50</string>
    <string name="hint_ethanol">Ex.: 2.50</string>
    <string name="hint_average_gasoline">Ex.: 9</string>
    <string name="hint_average_ethanol">Ex.: 5</string>
    <string name="calculate">Calcular</string>
    <string name="header_suggestion">Sugestão de Abastecimento</string>
    <string name="header_spent">Gasto R$/Km</string>
    <string name="gasoline">Gasolina</string>
    <string name="ethanol">Etanol</string>
    <string name="label_fuel_ratio">Relação Gasolina/Etanol: %1$s</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Senha</string>
    <string name="button_login">Entrar</string>
    <string name="label_new_account">Ainda não tem conta? Crie uma</string>
    <string name="button_new_account">Criar conta</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="header_new_user">Novo Usuário</string>
</resources>
